2010-05-09  Doug Hellmann  <dhellmann@racemi.com>

	* virtualenvwrapper.sh: Tweak path normalization code so double
	slashes are also removed from WORKON_HOME. Use typeset for local
	variables.
	(virtualenvwrapper_tempfile): Add -t option to mktemp so the new
	files are always created in the user's temporary directory.
	(virtualenvwrapper_run_hook): Add the hook name to the temporary
	file name.

	* tests/test_tempfile.sh: Remove obsolete test.  Fix assertions
	for remaining test.

	* tests/test_mkvirtualenv.sh (test_hooks): Use pwd to convert
	WORKON_HOME to the expected value.

	* tests/test.sh (test_python_interpreter_set_incorrectly): Rework
	grep-based assertion to actually pass.

	* Makefile (test-bash test-ksh test-sh): Remove wildcard build
	rule so test-quick target works.

2010-05-02  Doug Hellmann  <dhellmann@racemi.com>

	* virtualenvwrapper.sh (virtualenvwrapper_run_hook): Instead of
	-m, use -c so hooks can be run under Python 2.4.

2010-04-29  Doug Hellmann  <dhellmann@racemi.com>

	* tests/test_workon.sh: Refactor deactivate tests into their own
	script.

	* tests/test_deactivate.sh: Refactor deactivate tests into their
	own script.

	* virtualenvwrapper.sh (virtualenvwrapper_get_python_version): Add
	a comment about why we're using the $PATH python instead of the
	one where the wrappers are installed.
	(add2virtualenv): Use the install-tree python instead of the one
	from $PATH.
	(deactivate): Ignore errors from redundant unset calls.

2010-04-26  Doug Hellmann  <dhellmann@racemi.com>

	* virtualenvwrapper.sh (virtualenvwrapper_tempfile): Add a suffix
	to the tempfile name so we know the tempfile module isn't going to
	erase it.