@@ -5,6 +5,7 @@
 test_dir=$(dirname $0)
 
 export WORKON_HOME="${TMPDIR:-/tmp}/WORKON_HOME"
+export HOOK_VERBOSE_OPTION=-v
 
 oneTimeSetUp() {
     rm -rf "$WORKON_HOME"
@@ -27,6 +28,28 @@ test_tempfile () {
     rm -f $filename
     assertSame "TMPDIR and path not the same for $filename." "$TMPDIR" "$(dirname $filename)/"
     assertTrue "virtualenvwrapper-hook not in filename." "echo $filename | grep virtualenvwrapper-hook"
+}
+
+test_no_such_tmpdir () {
+    old_tmpdir="$TMPDIR"
+    TMPDIR="$TMPDIR/does-not-exist"
+    virtualenvwrapper_run_hook "initialize" >/dev/null 2>&1
+    RC=$?
+    assertSame "Unexpected exit code $RC" "1" "$RC"
+    TMPDIR="$old_tmpdir"
+}
+
+test_tmpdir_not_writable () {
+    old_tmpdir="$TMPDIR"
+    TMPDIR="$TMPDIR/cannot-write"
+    mkdir "$TMPDIR"
+    chmod ugo-w "$TMPDIR"
+    virtualenvwrapper_run_hook "initialize" >/dev/null 2>&1
+    RC=$?
+    assertSame "Unexpected exit code $RC" "1" "$RC"
+    chmod ugo+w "$TMPDIR"
+    rmdir "$TMPDIR"
+    TMPDIR="$old_tmpdir"
 }
 
 . "$test_dir/shunit2"
